--- a/zk-helper/pom.xml
+++ b/zk-helper/pom.xml
@@ -6,15 +6,39 @@
 
     <groupId>com.github.panhongan.bigdata</groupId>
     <artifactId>zk-helper</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
 
     <name>zk-helper</name>
     <description>zookeeper helper</description>
     <url>https://github.com/panhongan/lalaluplus-bigdata/zk-helper</url>
 
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>panhongan</name>
+            <email>phadyc@126.com</email>
+            <organization>panhongan</organization>
+            <organizationUrl></organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>https://github.com/panhongan/lalaluplus-bigdata.git</connection>
+        <developerConnection>https://github.com/panhongan/lalaluplus-bigdata.git</developerConnection>
+        <url>https://github.com/panhongan/lalaluplus-bigdata/zk-helper</url>
+        <tag>v1.1</tag>
+    </scm>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -62,29 +86,6 @@
         </dependency>
     </dependencies>
 
-    <licenses>
-        <license>
-            <name>The Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
-
-    <developers>
-        <developer>
-            <name>panhongan</name>
-            <email>phadyc@126.com</email>
-            <organization>panhongan</organization>
-            <organizationUrl></organizationUrl>
-        </developer>
-    </developers>
-
-    <scm>
-        <connection>https://github.com/panhongan/lalaluplus-bigdata.git</connection>
-        <developerConnection>https://github.com/panhongan/lalaluplus-bigdata.git</developerConnection>
-        <url>https://github.com/panhongan/lalaluplus-bigdata/zk-helper</url>
-        <tag>v1.0</tag>
-    </scm>
-
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -102,42 +103,16 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.2</version>
-                <executions>
-                    <execution>
-                        <id>scala-compile-first</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>scala-test-compile</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <args>
-                        <arg>-nobootcp</arg>
-                    </args>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -164,7 +139,8 @@
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
-                    <source>8</source>
+                    <source>${maven.compiler.source}</source>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
                 <executions>
                     <execution>
@@ -193,5 +169,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
