--- a/kafka-helper/pom.xml
+++ b/kafka-helper/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.panhongan.bigdata</groupId>
-    <artifactId>zk-helper</artifactId>
+    <artifactId>kafka-helper</artifactId>
     <version>1.1</version>
 
-    <name>zk-helper</name>
-    <description>zookeeper helper</description>
-    <url>https://github.com/panhongan/lalaluplus-bigdata/zk-helper</url>
+    <name>kafka-helper</name>
+    <description>kafka helper</description>
+    <url>https://github.com/panhongan/lalaluplus-bigdata/kafka-helper</url>
 
     <licenses>
         <license>
@@ -31,7 +31,7 @@
     <scm>
         <connection>https://github.com/panhongan/lalaluplus-bigdata.git</connection>
         <developerConnection>https://github.com/panhongan/lalaluplus-bigdata.git</developerConnection>
-        <url>https://github.com/panhongan/lalaluplus-bigdata/zk-helper</url>
+        <url>https://github.com/panhongan/lalaluplus-bigdata/kafka-helper</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -57,9 +57,51 @@
 
     <dependencies>
         <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-            <version>3.2.2</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>0.10.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.10.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+            <version>2.4.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.panhongan.bigdata</groupId>
+            <artifactId>zk-helper</artifactId>
+            <version>1.1</version>
         </dependency>
 
         <dependency>
@@ -67,36 +109,6 @@
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>3.7.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-client</artifactId>
-            <version>2.9.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.zookeeper</groupId>
-                    <artifactId>zookeeper</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-            <version>2.9.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.zookeeper</groupId>
-                    <artifactId>zookeeper</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
 
